--- a/hw1/main.tex
+++ b/hw1/main.tex
@@ -39,7 +39,12 @@
              pdfdate=\artdate,
              pdfdisplaydoctitle=true,
              pdflang=zh-CN,
-             pdfstartview=FitH}
+             pdfstartview=FitH,
+             colorlinks=true,
+             linkcolor=black
+             }
+             
+      
  
  \geometry{
      a4paper,
