--- a/hw1/content.tex
+++ b/hw1/content.tex
@@ -177,7 +177,7 @@
 \subsection*{算法描述}
 如算法\ref{algo:mid}。
 
-\begin{algorithm}
+\begin{algorithm}[H]
     \SetKw{Let}{Let}
     \SetKw{Var}{Var}
     \caption{$findKthMinElement(A[1..n], B[1..m],k)$}\label{algo:mid}
@@ -216,9 +216,79 @@
 \section{双调序列最大值问题}
 \subsection*{问题分析}
 
+双调序列的最大值一定位于增减区间的转换点，且先增后减，因此，如果可以快速确定增减区间转折点出现的位置区间，则可以快速的解决问题。
+
+采用倍增的方法从左向右搜索数列的由增到减的拐点，会出现以下两种情况
+
+\begin{enumerate}
+    \item 数列左端位于增区间内，由于双调函数的性质，若此增区间右侧还有另一个增区间，那么位于另一个增区间的数应均小于左端点所处的增区间的所有数。因此只需要搜索离左端增区间最近的拐点即可。
+    搜索的步骤如下\begin{enumerate}
+        \item 取倍增区间长度初始值为$d = 1$。
+        \item 比较数列中 $A[l + d]$、$A[l + d + 1]$、$A[l + d/2]$ 若满足$A[l + d] < A[l + d + 1] \text{且} A[l + d] > A[l + d/2]$，则说明$A[l..l+d]$仍然位于增区间，还没找到拐点。
+        \item 将d倍增，重复步骤2，直到条件不满足，说明拐点位于$A[l..l+d]$中。
+        \item 递归的搜索$A[l..l+d]$。
+    \end{enumerate}
+    \item 数列左端位于减区间内，则按照情况1的方法，找到下一个增区间，从而将问题转化回情况1，搜索步骤同1中步骤，1.2的判断条件改为$A[l + d] > A[l + d + 1] \text{且} A[l + d] < A[l + d/2]$
+\end{enumerate}
+
 \subsection*{算法描述}
 
+如算法\ref{algo:findPeak}。\\
+
+\begin{algorithm}[H]
+    \SetKw{Let}{Let}
+    \SetKw{Var}{Var}
+    \caption{$findPeak(l, r)$}\label{algo:findPeak}
+    \KwIn{双调序列$A[l..r]$}
+    \KwOut{$A$中最大值}
+    \If(){$l=r-1$}{
+        \Return{$A[l]$}\\
+    }
+    \If(){$A[l] < A[l+1]$}{
+        $d \leftarrow 1$\\
+        \While(){$l+d < r $ and $A[l + d] < A[l + d + 1] $ and $ A[l + d] > A[l + d/2]$}{
+            $d \leftarrow 2d$
+        }
+        \Return{$findPeak(l+d/2, l+d)$}
+    }\Else(){
+        $d \leftarrow 1$\\
+        \While(){$l+d < r $ and $A[l + d] > A[l + d + 1] $ and $ A[l + d] < A[l + d/2]$}{
+            $d \leftarrow 2d$
+        }
+        \Return{$findPeak(l+d, r)$}
+    }
+\end{algorithm}
+
 \subsection*{时间复杂度分析}
+
+对于情况1
+每次递归可以将问题规模减小一半，搜索区间采用倍增方法，因此有递推式
+\begin{equation}
+    \begin{aligned}
+        T(1) &= 1\\
+        T(n) & =T(n/2) + O(\log n)
+    \end{aligned}
+    \nonumber
+\end{equation}
+假设$n$为2的幂次
+\begin{equation}
+    \begin{aligned}
+        T(n) &= T(n/2) + O(\log n)\\
+            &= \log n + \log \frac{n}{2} + \log \frac{n}{4} + ...\\
+            &= \log n * \log n - (\log 1 + \log 2 + \log 4 + ... + \log n)\\
+            &= (\log n) ^ 2 - (0+1+2+3+...+\log n)\\
+            &= (\log n)^2 - \frac{(1+\log n)\log n}{2}\\
+            &= \log^2 n - \frac{1}{2}\log n - \frac{1}{2} \log^2 n\\
+            &= \frac{1}{2} \log^2 n - \frac{1}{2} \log n\\
+            &= O(log^2 n)
+    \end{aligned}
+    \nonumber
+\end{equation}
+
+对于情况2
+需要$O(\log n)$的代价转化成情况1。
+
+因此总体时间复杂度为$O(log^2 n) + O(\log n) = O(\log ^2 n)$。
 
 \section{字符串等价关系判定问题}
 
@@ -232,7 +302,7 @@
 
 如算法\ref{algo:findSymbol}
 
-\begin{algorithm}
+\begin{algorithm}[H]
     \SetKw{Let}{Let}
     \SetKw{Var}{Var}
     \caption{$findSymbol(A[1..n], B[1..m],k)$}\label{algo:findSymbol}
@@ -258,12 +328,13 @@
 有
 \begin{equation}
     \begin{aligned}
+        T(1) &= 1\\
         T(n) &=2T(n/2)+O(n)
     \end{aligned}
     \nonumber
 \end{equation}
 
-得时间复杂度为$O(n \log n)$。
+由主定理可得时间复杂度为$O(n \log n)$。
 
 比较两个代表串是否等需要$O(n)$。
 
@@ -294,44 +365,63 @@
 
 如算法\ref{algo:findNearest}
 
-\begin{algorithm}
+\begin{algorithm}[H]
     \SetKw{Let}{Let}
     \SetKw{Var}{Var}
     \caption{$findNearest(S[1..n])$}\label{algo:findNearest}
     \KwIn{$S[m..n]$}
-    \KwOut{S中距离最小的两个点$v_{i}, -v_{j}$的距离}
-    $d \leftarrow \infty$
-    \If(){$n=m$}{
-        \Return{$d$}
-    }
+    \KwOut{S中距离最小的两个点$v_{i}, v_{j}$}
+    $d \leftarrow \infty$\\
+
     \If(){$m+1=n$}{
-        \Return{$distance(S[m], S[n])$}
+        \Return{$S[m], S[n]$}
     }
     $mid \leftarrow (m+n)/2 $\\
-    $d1 \leftarrow findNearest(m,mid)$\\
-    $d2 \leftarrow findNearest(mid, n)$\\
+    $t1, t2 \leftarrow findNearest(m,mid)$\\
+    $d1 \leftarrow distance(t1,t2)$\\
+    $t3, t4 \leftarrow findNearest(mid, n)$
+    $d2 \leftarrow distance(t3, t4)$\\
+    \If(){$d1 < d2$}{
+        $v_i, v_j = t1, t2$\\
+    }\Else(){
+        $v_i, v_j = t3, t4$
+    }
     $d \leftarrow min(d1, d2)$\\
-    $k \leftarrow 1$ 
-    \For(){$i = m up to n$}{
+    $k \leftarrow 1$ \\
+    \For(){$i = m$ up to $n$}{ \emph{//find all point in d * 2d area} \\
         \If(){$S[i].x-S[mid].x < d$}{
             $temp[k] \leftarrow i$\\
             $k \leftarrow k+1$
         }
     }
-    $sort(temp)$\\
-    \For(){$i= 0 up to k$}{
+
+    $sort(temp)$ \\
+    \emph{//sorted temp by y form small to big} \\
+
+    \For(){$i= 0$ up to $k$}{ \emph{//find the nearest two points}\\
         \For(){$j=j+1; j<k and S[temp[j]].y - S[temp[i]].y < d; j++$}{
+            \If(){$d < distance(S[temp[i]], S[temp[j]])$}{
+                $v_i, v_j \leftarrow S[temp[i]], S[temp[j]] $
+            }
             $d=min(d, distance(S[temp[i]], S[temp[j]]))$
         }
     }
-    \Return{$d$}
-    
 
+    \Return{$v_i, v_j$}
 \end{algorithm}
 
 
 \subsection*{时间复杂度分析}
 
-若每次分治的同时使用归并排序，则合并的时间复杂度为$O(n)$。
-递归式为$T(n)=2T(n/2) + O(n)$。
-最终时间复杂度$O(n \log n)$。
+每次分治可以将问题划分为两个规模为二分之一的子问题，若每次分治的同时使用归并排序，则合并的时间复杂度为$O(n)$。
+递归式为
+
+\begin{equation}
+    \begin{aligned}
+        T(2) &= 1\\
+        T(n) & =2T(n/2) + O(n)
+    \end{aligned}
+    \nonumber
+\end{equation}
+
+由主定理可得最终时间复杂度$O(n \log n)$。
