--- a/hw2/content.tex
+++ b/hw2/content.tex
@@ -146,7 +146,7 @@
     }\Else(){
         $d \leftarrow 1$\\
         \While(){$l+d < r $ and $A[l + d] > A[l + d + 1] $ and $ A[l + d] < A[l + d/2]$}{
-            $d \leftarrow 2d$
+            $xd \leftarrow 2d$
         }
         \Return{$findPeak(l+d, r)$}
     }
