--- a/hw2/main.tex
+++ b/hw2/main.tex
@@ -55,9 +55,8 @@
  }
  
  \graphicspath{{figures/}}
- 
-
  \setminted{frame=lines, linenos=true, breaklines=true}
+ 
  
  \begin{document}
  
@@ -89,6 +88,7 @@
    
  \end{titlepage}
  
+ \tableofcontents
  \input{content}
  
  \end{document}
